[gd_scene load_steps=88 format=2]

[ext_resource path="res://Assets/boss-2.png" type="Texture" id=1]
[ext_resource path="res://Assets/boss-3.png" type="Texture" id=2]
[ext_resource path="res://Assets/boss-1.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Boss Guy.gd" type="Script" id=4]
[ext_resource path="res://Assets/circle-blood.png" type="Texture" id=5]
[ext_resource path="res://Assets/Boss/Zombie - Tank - Hitting1.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/enemyhurt.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/SFX/enemy death.wav" type="AudioStream" id=8]
[ext_resource path="res://Assets/boss-4.png" type="Texture" id=9]
[ext_resource path="res://Assets/boss-5.png" type="Texture" id=10]
[ext_resource path="res://Assets/Boss/Untitled 12-02-2022 07-50-59 (3).png" type="Texture" id=11]
[ext_resource path="res://Assets/Boss/Untitled 12-02-2022 07-50-59 (1).png" type="Texture" id=12]
[ext_resource path="res://Assets/Boss/Zombie - Tank - Hitting2.ogg" type="AudioStream" id=13]

[sub_resource type="Shader" id=24]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 color = texture(TEXTURE,UV);
	color.rgb = mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=126]
resource_local_to_scene = true
shader = SubResource( 24 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=93]
atlas = ExtResource( 12 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=94]
atlas = ExtResource( 12 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=95]
atlas = ExtResource( 12 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=96]
atlas = ExtResource( 12 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=97]
atlas = ExtResource( 12 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=98]
atlas = ExtResource( 12 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=99]
atlas = ExtResource( 12 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=100]
atlas = ExtResource( 12 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=101]
atlas = ExtResource( 12 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=102]
atlas = ExtResource( 12 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=103]
atlas = ExtResource( 12 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=104]
atlas = ExtResource( 12 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 10 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 10 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 10 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 10 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=105]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=106]
atlas = ExtResource( 11 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=107]
atlas = ExtResource( 11 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=108]
atlas = ExtResource( 11 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=109]
atlas = ExtResource( 11 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=110]
atlas = ExtResource( 11 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=111]
atlas = ExtResource( 11 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=112]
atlas = ExtResource( 11 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=113]
atlas = ExtResource( 11 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=114]
atlas = ExtResource( 11 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=115]
atlas = ExtResource( 11 )
region = Rect2( 512, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=116]
atlas = ExtResource( 11 )
region = Rect2( 768, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 9 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 9 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 9 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 9 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 9 )
region = Rect2( 256, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=87]
atlas = ExtResource( 3 )
region = Rect2( 0, 512, 256, 256 )

[sub_resource type="AtlasTexture" id=88]
atlas = ExtResource( 3 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=89]
atlas = ExtResource( 3 )
region = Rect2( 768, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=90]
atlas = ExtResource( 3 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=91]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=92]
atlas = ExtResource( 3 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=80]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=81]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=82]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=83]
atlas = ExtResource( 2 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=84]
atlas = ExtResource( 2 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=85]
atlas = ExtResource( 2 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=86]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 256 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 1 )
region = Rect2( 0, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 1 )
region = Rect2( 256, 256, 256, 256 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 1 )
region = Rect2( 512, 256, 256, 256 )

[sub_resource type="SpriteFrames" id=23]
animations = [ {
"frames": [ SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ) ],
"loop": false,
"name": "Attack1",
"speed": 8.0
}, {
"frames": [ SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ) ],
"loop": false,
"name": "Attack2",
"speed": 5.0
}, {
"frames": [ SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ) ],
"loop": true,
"name": "Attack3",
"speed": 8.0
}, {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ) ],
"loop": false,
"name": "BeforeJump",
"speed": 5.0
}, {
"frames": [ SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ) ],
"loop": false,
"name": "BoulderThrow",
"speed": 6.0
}, {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 86 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ) ],
"loop": true,
"name": "Walk",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=31]
radius = 15.0
height = 16.0

[sub_resource type="Animation" id=25]
resource_name = "Attack"
length = 1.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=26]
resource_name = "Idle"
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=27]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 8 ]
}

[sub_resource type="Animation" id=28]
resource_name = "Walk"
length = 1.05
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 23.5, 26 )

[sub_resource type="Curve2D" id=118]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -38.953, -5.957, 0, 0, 0, 0, -3.953, -39.957, 0, 0, 0, 0, 32.047, -4.957, 0, 0, 0, 0, -3.953, 23.043, 0, 0, 0, 0, 20.047, 16.043, 0, 0, 0, 0, 17.047, -27.957, 0, 0, 0, 0, -26.953, -27.957, 0, 0, 0, 0, -28.953, 21.043 )
}

[sub_resource type="Curve2D" id=119]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2.953, -38.957, 0, 0, 0, 0, 17.047, -33.957, 0, 0, 0, 0, 23.047, -22.957, 0, 0, 0, 0, 23.047, -9.957, 0, 0, 0, 0, 23.047, 5.043, 0, 0, 0, 0, 17.047, 18.043, 0, 0, 0, 0, -2.953, 24.043, 0, 0, 0, 0, -25.953, 17.043, 0, 0, 0, 0, -32.953, 6.043, 0, 0, 0, 0, -33.953, -9.957, 0, 0, 0, 0, -32.953, -22.957, 0, 0, 0, 0, -25.953, -35.957 )
}

[sub_resource type="Gradient" id=127]
interpolation_mode = 2
offsets = PoolRealArray( 0, 0.423237, 0.672199, 1 )
colors = PoolColorArray( 0.188235, 0.0156863, 0.0431373, 0.811765, 1, 0.513726, 0, 1, 1, 0.513726, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=15]
gradient = SubResource( 127 )

[sub_resource type="Curve" id=128]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), -2.1, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=36]
curve = SubResource( 128 )

[sub_resource type="ParticlesMaterial" id=129]
emission_shape = 1
emission_sphere_radius = 26.78
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 42.95
radial_accel_random = 0.06
angle = 720.0
angle_random = 1.0
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 36 )
color_ramp = SubResource( 15 )
hue_variation = -0.06
hue_variation_random = 1.0

[node name="Boss Dude" type="KinematicBody2D"]
z_index = 2
collision_layer = 16
collision_mask = 4
script = ExtResource( 4 )

[node name="Sprite" type="AnimatedSprite" parent="."]
light_mask = 4
material = SubResource( 126 )
position = Vector2( 0, -38 )
scale = Vector2( 0.298828, 0.298828 )
frames = SubResource( 23 )
animation = "Walk"
frame = 5

[node name="BulletSpawnPoint" type="Position2D" parent="Sprite"]
position = Vector2( -16.732, 127.163 )
scale = Vector2( 3.34641, 3.34641 )

[node name="crackpoint" type="Position2D" parent="Sprite"]
position = Vector2( -36.8105, 133.856 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, -24 )
shape = SubResource( 31 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 25 )
anims/Idle = SubResource( 26 )
anims/RESET = SubResource( 27 )
anims/Walk = SubResource( 28 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.435294 )
position = Vector2( 0, -0.229004 )
scale = Vector2( 2.875, 0.278625 )
z_index = -1
texture = ExtResource( 5 )

[node name="TimerTillAttack" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="AttackTimer2" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="TimerTillWalk" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="ReadingUp" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1.5, -25 )
shape = SubResource( 32 )

[node name="hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
volume_db = -11.361
attenuation = 4.43828
bus = "SoundEffects"

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -9.613
attenuation = 4.43828
bus = "SoundEffects"

[node name="hit1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 1.0
max_distance = 3000.0
attenuation = 1.41421
bus = "SoundEffects"

[node name="hit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )
volume_db = 2.0
max_distance = 3000.0
attenuation = 1.41421
bus = "SoundEffects"

[node name="burn_timer" type="Timer" parent="."]
one_shot = true

[node name="burn_tick" type="Timer" parent="."]
wait_time = 0.15

[node name="time_to_catch_on_fire" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="flames_shield" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="damage" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="boulder_throw" type="Timer" parent="."]
wait_time = 0.8
one_shot = true

[node name="Path1" type="Path2D" parent="."]
visible = false
position = Vector2( 2.953, -22.043 )
curve = SubResource( 118 )

[node name="Path2" type="Path2D" parent="."]
visible = false
position = Vector2( 2.953, -16.043 )
curve = SubResource( 119 )

[node name="FlameParticles" type="Particles2D" parent="."]
modulate = Color( 2, 1, 1, 1 )
show_behind_parent = true
position = Vector2( -1, -23 )
z_index = 1
emitting = false
amount = 50
local_coords = false
process_material = SubResource( 129 )

[connection signal="timeout" from="TimerTillAttack" to="." method="_on_TimerTillAttack_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackTimer2" to="." method="_on_AttackTimer2_timeout"]
[connection signal="timeout" from="TimerTillWalk" to="." method="_on_TimerTillWalk_timeout"]
[connection signal="timeout" from="ReadingUp" to="." method="_on_ReadingUp_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="area_exited" from="Hitbox" to="." method="_on_Hitbox_area_exited"]
[connection signal="body_exited" from="Hitbox" to="." method="_on_Hitbox_body_exited"]
[connection signal="timeout" from="burn_timer" to="." method="_on_burn_timer_timeout"]
[connection signal="timeout" from="burn_tick" to="." method="_on_burn_tick_timeout"]
[connection signal="timeout" from="time_to_catch_on_fire" to="." method="_on_time_to_catch_on_fire_timeout"]
[connection signal="timeout" from="flames_shield" to="." method="_on_flames_shield_timeout"]
[connection signal="timeout" from="damage" to="." method="_on_damage_timeout"]
[connection signal="timeout" from="boulder_throw" to="." method="_on_boulder_throw_timeout"]
